start simplifying this mess

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-	"search.exclude": {
-		"dist/**": true
-	}
+  "eslint.autoFixOnSave": false,
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": false // it mess up formatting and folding
+  },
+  "search.exclude": {
+    "build/**": true,
+    "dist/**": true
+  },
+  "javascript.validate.enable": false
 }
