--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "dist",
     "src"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function"
+  },
   "devDependencies": {
     "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
     "prettier": "1.9.1",
     "@dmail/prettiest": "1.0.0",
     "eslint": "5.10.0",
     "eslint-plugin-import": "2.6.0",
-    "babel-eslint": "10.0.1",
     "rimraf": "2.6.2",
     "rollup": "0.66.2",
     "rollup-plugin-babel": "4.0.3",
