--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
   },
   "main": "dist/index.js",
   "module": "index.js",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "dependencies": {
-    "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function"
-  },
+  "files": ["dist", "src"],
+  "dependencies": {},
   "devDependencies": {
-    "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
-    "prettier": "1.9.1",
     "@dmail/prettiest": "1.0.0",
+    "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
+    "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function",
+    "prettier": "1.9.1",
     "eslint": "5.10.0",
     "eslint-plugin-import": "2.6.0",
     "rimraf": "2.6.2",
