--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "main": "dist/index.js",
   "module": "index.js",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {},
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@dmail/prettiest": "1.0.0",
     "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
     "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function",
