--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   },
   "main": "dist/index.js",
   "module": "index.js",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src", "babel.config.js"],
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
