--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
   },
   "main": "dist/index.js",
   "module": "index.js",
-  "files": ["dist", "src", "babel.config.js"],
+  "files": [
+    "dist",
+    "src",
+    "babel.config.js"
+  ],
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0",
+    "@babel/plugin-transform-spread": "7.2.0",
     "@dmail/prettiest": "1.0.0",
     "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
     "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function",
-    "prettier": "1.9.1",
     "eslint": "5.10.0",
     "eslint-plugin-import": "2.6.0",
+    "prettier": "1.9.1",
     "rimraf": "2.6.2",
     "rollup": "0.66.2",
     "rollup-plugin-babel": "4.0.3",
-    "rollup-plugin-node-resolve": "3.4.0",
-    "@babel/core": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-spread": "7.2.0"
+    "rollup-plugin-node-resolve": "3.4.0"
   },
   "scripts": {
     "lint": "eslint .",
