--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-transform-spread": "7.2.0",
     "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
-    "babel-eslint": "github:dmail-fork/babel-eslint#allow-await-outside-function",
+    "babel-eslint": "11.0.0-beta.0",
     "eslint": "5.10.0",
     "eslint-plugin-import": "2.6.0",
     "prettier": "1.9.1",
