--- a/package.json
+++ b/package.json
@@ -11,14 +11,9 @@
   },
   "main": "dist/index.js",
   "module": "index.js",
-  "files": [
-    "dist",
-    "src",
-    "babel.config.js"
-  ],
+  "files": ["dist", "src", "babel.config.js"],
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
