--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "main": "dist/index.js",
   "module": "index.js",
   "files": ["dist", "src", "babel.config.js"],
-  "dependencies": {},
+  "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-transform-spread": "7.2.0",
     "@dmail/project-prettier-config": "github:dmail/project-prettier-config",
     "babel-eslint": "11.0.0-beta.0",
