prepare big update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsenv/eslint-config",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -9,37 +9,39 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
+  "main": "dist/commonjs/main.js",
   "module": "index.js",
   "files": [
-    "index.js",
-    "src",
-    "dist",
-    "babel.config.js"
+    "/index.js",
+    "/src/",
+    "/dist/"
   ],
+  "scripts": {
+    "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
+    "eslint-check": "eslint .",
+    "prettier-check": "node ./script/prettier-check/prettier-check.js",
+    "generate-commonjs-bundle": "node ./script/generate-commonjs-bundle/generate-commonjs-bundle.js",
+    "dist": "npm run clean && npm run generate-commonjs-bundle",
+    "clean": "rimraf dist && rimraf coverage",
+    "reinstall": "npm run clean && rimraf node_modules && npm install",
+    "prepublishOnly": "npm run dist"
+  },
   "dependencies": {
+    "@babel/core": "7.2.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0"
+    "@babel/plugin-syntax-import-meta": "7.2.0",
+    "babel-eslint": "11.0.0-beta.0",
+    "@jsenv/eslint-import-resolver": "4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-spread": "7.2.0",
+    "@jsenv/bundling": "1.12.0",
+    "@jsenv/eslint-config": "8.0.0",
     "@jsenv/prettier-config": "1.0.0",
-    "babel-eslint": "11.0.0-beta.0",
+    "@jsenv/prettier-check-project": "3.1.0",
+    "@jsenv/node-module-import-map": "3.0.0",
     "eslint": "5.10.0",
     "eslint-plugin-import": "2.6.0",
-    "prettier": "1.9.1",
-    "rimraf": "2.6.2",
-    "rollup": "0.66.2",
-    "rollup-plugin-babel": "4.0.3",
-    "rollup-plugin-node-resolve": "3.4.0"
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "compile": "node ./script/compile.js",
-    "clean": "rimraf dist",
-    "dist": "npm run clean && npm run compile",
-    "prepublishOnly": "npm run dist"
+    "prettier": "1.18.2",
+    "rimraf": "2.6.2"
   }
 }
