--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,68 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch with node",
+      "name": "node",
       "type": "node",
-      "protocol": "inspector",
       "request": "launch",
+      "protocol": "inspector",
       "program": "${file}",
       "autoAttachChildProcesses": true,
       "sourceMaps": true,
-      // "outFiles": ["${workspaceRoot}/build/**/*.js"],
-      // "outputCapture": "std",
-      // https://github.com/Microsoft/vscode-chrome-debug-core/commit/eb552d621f1f6fbebcfca5d2390020dc7d8877e0#diff-b4f13aa3c326d081dea7875f9c0fe84aR31
+      "sourceMapPathOverrides": {
+        "/*": "${workspaceFolder}/*"
+      },
+      "smartStep": true,
       "skipFiles": [
+        // force-array-multiline
         "node_modules/**",
-        // https://github.com/Microsoft/vscode-react-native/issues/620
         "<node_internals>/**/*.js"
       ]
-      // "trace": true,
+    },
+    {
+      "name": "jsenv-node",
+      "type": "node",
+      "request": "launch",
+      "protocol": "inspector",
+      "program": "${workspaceFolder}/script/run-node/run-node.js",
+      "args": ["${relativeFile}"],
+      "autoAttachChildProcesses": true,
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "/*": "${workspaceFolder}/*"
+      },
+      "smartStep": true,
+      "skipFiles": [
+        // force-array-multiline
+        "node_modules/**",
+        "<node_internals>/**/*.js"
+      ]
+    },
+    {
+      "name": "jsenv-chrome",
+      "type": "chrome",
+      "request": "launch",
+      // won't work on windows https://github.com/Microsoft/vscode/issues/40256
+      // relativeFile use backslashes
+      "url": "http://127.0.0.1:3456/${relativeFile}",
+      "runtimeArgs": ["--allow-file-access-from-files", "--disable-web-security"],
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "/*": "${workspaceFolder}/*"
+      },
+      "smartStep": true,
+      "skipFiles": ["node_modules/**", "<node_internals>/**/*.js"]
+    },
+    {
+      "name": "jsenv-node-attach-child",
+      "type": "node",
+      "request": "attach",
+      "port": 40000,
+      "smartStep": true,
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "/*": "${workspaceFolder}/*"
+      },
+      "skipFiles": ["node_modules/**", "<node_internals>/**/*.js"]
     }
   ]
 }
