add react and jsx stuff

--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "prepublishOnly": "npm run dist"
   },
   "dependencies": {
+    "eslint-plugin-import": "2.6.0",
+    "eslint-plugin-react": "7.14.0",
+    "babel-eslint": "11.0.0-beta.0",
     "@babel/core": "7.2.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "babel-eslint": "11.0.0-beta.0",
+    "@babel/plugin-syntax-jsx": "7.2.0",
     "@jsenv/eslint-import-resolver": "4.7.0"
   },
   "devDependencies": {
@@ -40,7 +43,6 @@
     "@jsenv/prettier-check-project": "3.1.0",
     "@jsenv/node-module-import-map": "3.0.0",
     "eslint": "5.10.0",
-    "eslint-plugin-import": "2.6.0",
     "prettier": "1.18.2",
     "rimraf": "2.6.2"
   }
