--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsenv/eslint-config",
-  "version": "9.0.0",
+  "version": "9.2.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
   "module": "index.js",
   "files": [
     "/index.js",
+    "/babel.config.js",
     "/src/",
     "/dist/"
   ],
