--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsenv/eslint-config",
-  "version": "9.7.0",
+  "version": "9.8.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -12,10 +12,10 @@
   "main": "dist/commonjs/main.js",
   "module": "index.js",
   "files": [
-    "/index.js",
-    "/babel.config.js",
+    "/dist/",
     "/src/",
-    "/dist/"
+    "/index.js",
+    "/babel.config.js"
   ],
   "scripts": {
     "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
@@ -28,24 +28,24 @@
     "prepublishOnly": "npm run dist"
   },
   "dependencies": {
-    "eslint-plugin-import": "2.6.0",
-    "eslint-plugin-react": "7.14.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-react": "7.14.3",
     "babel-eslint": "11.0.0-beta.0",
-    "@babel/core": "7.2.2",
+    "@babel/core": "7.5.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
     "@jsenv/eslint-import-resolver": "4.9.0"
   },
   "devDependencies": {
-    "@jsenv/bundling": "1.12.0",
+    "@jsenv/bundling": "1.13.0",
     "@jsenv/eslint-config": "9.7.0",
     "@jsenv/prettier-config": "1.0.0",
-    "@jsenv/prettier-check-project": "3.1.0",
-    "@jsenv/node-module-import-map": "3.0.0",
-    "react": "16.8.6",
-    "eslint": "5.10.0",
+    "@jsenv/prettier-check-project": "3.2.0",
+    "@jsenv/node-module-import-map": "3.2.0",
+    "react": "16.9.0",
+    "eslint": "6.2.0",
     "prettier": "1.18.2",
-    "rimraf": "2.6.2"
+    "rimraf": "3.0.0"
   }
 }
