--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/jsenv/jsenv-eslint-config"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "main": "dist/commonjs/main.js",
   "module": "index.js",
