update deps and add options especially importResolutionResolverOptions

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.dist/
 /coverage/
-/dist/
+/dist/importMap.json
 /node_modules/
 /importMap.json
 /jsconfig.json
-/secrets.json
 /package-lock.json
+/secrets.json
 /yarn.lock
