--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@jsenv/eslint-config",
-  "version": "10.2.0",
+  "description": "eslint config used by jsenv codebase",
+  "version": "11.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/jsenv/jsenv-eslint-config"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   },
   "publishConfig": {
     "access": "public",
@@ -38,22 +42,23 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
-    "@jsenv/eslint-import-resolver": "5.0.1",
+    "@jsenv/eslint-import-resolver": "6.0.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react": "7.16.0",
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
-    "@jsenv/bundling": "6.3.0",
-    "@jsenv/codecov-upload": "1.9.0",
-    "@jsenv/eslint-config": "10.1.0",
-    "@jsenv/execution": "6.1.0",
-    "@jsenv/node-launcher": "4.20.0",
+    "@jsenv/auto-publish": "1.9.0",
+    "@jsenv/bundling": "7.6.2",
+    "@jsenv/codecov-upload": "2.0.0",
+    "@jsenv/eslint-config": "10.2.0",
+    "@jsenv/execution": "6.11.0",
+    "@jsenv/node-launcher": "4.26.0",
     "@jsenv/prettier-config": "1.0.1",
     "@jsenv/prettier-check-project": "3.5.0",
-    "@jsenv/node-module-import-map": "7.1.0",
-    "@jsenv/testing": "3.6.0",
-    "eslint": "6.5.0",
+    "@jsenv/node-module-import-map": "8.2.1",
+    "@jsenv/testing": "3.9.0",
+    "eslint": "6.5.1",
     "prettier": "1.18.2",
     "react": "16.9.0",
     "rimraf": "3.0.0"
