update dep to fix issue with node version

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,14 @@
       "protocol": "inspector",
       "program": "${file}",
       "autoAttachChildProcesses": true,
-      "sourceMaps": true,
+      "sourceMaps": false,
       "sourceMapPathOverrides": {
         "/*": "${workspaceFolder}/*"
       },
       "smartStep": true,
       "skipFiles": [
         // force-array-multiline
-        "node_modules/**",
+        // "node_modules/**",
         "<node_internals>/**/*.js"
       ]
     },
