--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: code format
         run: npm run prettier-check
       - name: testing
-        run: npm run generate-coverage
+        run: npm run test-with-coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -36,14 +36,14 @@ jobs:
         run: npm run upload-coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - name: auto publish
+      - name: publish package
         if: github.event_name == 'push'
-        run: node ./.github/auto-publish.js
+        run: node ./.github/publish-package.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: auto release on github
+      - name: ensure github release
         if: github.event_name == 'push'
-        run: node ./.github/auto-release-on-github.js
+        run: node ./.github/ensure-github-release-for-package.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
