--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase",
-  "version": "11.3.0",
+  "version": "12.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -48,18 +48,15 @@
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
-    "@jsenv/auto-publish": "2.0.0",
-    "@jsenv/bundling": "7.7.1",
     "@jsenv/codecov-upload": "2.0.0",
-    "@jsenv/eslint-config": "11.2.0",
-    "@jsenv/execution": "6.11.0",
-    "@jsenv/node-launcher": "4.26.0",
-    "@jsenv/prettier-config": "1.0.1",
-    "@jsenv/prettier-check-project": "3.5.0",
-    "@jsenv/node-module-import-map": "8.3.0",
+    "@jsenv/core": "10.0.0-alpha.11",
+    "@jsenv/eslint-config": "11.3.0",
+    "@jsenv/prettier-config": "1.1.0",
+    "@jsenv/prettier-check-project": "4.0.0",
+    "@jsenv/node-module-import-map": "9.0.0",
     "@jsenv/testing": "3.9.0",
-    "eslint": "6.6.0",
-    "prettier": "1.18.2",
+    "eslint": "6.7.2",
+    "prettier": "1.19.1",
     "react": "16.9.0",
     "rimraf": "3.0.0"
   }
