--- a/package.json
+++ b/package.json
@@ -48,16 +48,17 @@
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
+    "@jsenv/assert": "1.1.1",
     "@jsenv/codecov-upload": "2.0.0",
     "@jsenv/core": "10.0.0-alpha.11",
     "@jsenv/eslint-config": "11.3.0",
-    "@jsenv/prettier-config": "1.1.0",
-    "@jsenv/prettier-check-project": "4.0.0",
+    "@jsenv/github-release-package": "1.1.1",
     "@jsenv/node-module-import-map": "9.0.0",
-    "@jsenv/testing": "3.9.0",
+    "@jsenv/package-publish": "1.1.0",
+    "@jsenv/prettier-check-project": "4.0.0",
+    "@jsenv/prettier-config": "1.1.0",
     "eslint": "6.7.2",
     "prettier": "1.19.1",
-    "react": "16.9.0",
     "rimraf": "3.0.0"
   }
 }
