--- a/package.json
+++ b/package.json
@@ -43,22 +43,22 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
-    "@jsenv/importmap-eslint-resolver": "1.0.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-react": "7.16.0",
+    "@jsenv/importmap-eslint-resolver": "1.1.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-react": "7.17.0",
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
     "@jsenv/assert": "1.1.1",
-    "@jsenv/codecov-upload": "2.0.0",
-    "@jsenv/core": "10.0.0-alpha.11",
+    "@jsenv/codecov-upload": "3.1.0",
+    "@jsenv/core": "10.4.0",
     "@jsenv/eslint-config": "12.0.0",
     "@jsenv/github-release-package": "1.1.1",
-    "@jsenv/node-module-import-map": "9.0.0",
-    "@jsenv/package-publish": "1.1.0",
-    "@jsenv/prettier-check-project": "4.0.0",
+    "@jsenv/node-module-import-map": "10.0.0",
+    "@jsenv/package-publish": "1.2.0",
+    "@jsenv/prettier-check-project": "4.2.0",
     "@jsenv/prettier-config": "1.1.0",
-    "eslint": "6.7.2",
+    "eslint": "6.8.0",
     "prettier": "1.19.1",
     "rimraf": "3.0.0"
   }
