--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,16 +7,16 @@
       "request": "launch",
       "protocol": "inspector",
       "program": "${file}",
+      "runtimeVersion": "13.6.0",
       "autoAttachChildProcesses": true,
-      "sourceMaps": false,
-      "sourceMapPathOverrides": {
-        "/*": "${workspaceFolder}/*"
-      },
+      "sourceMaps": true,
       "smartStep": true,
       "skipFiles": [
         // force-array-multiline
         // "node_modules/**",
-        "<node_internals>/**/*.js"
+        "node_modules/@babel/template/**",
+        "node_modules/@dmail/cancellation/**",
+        "<node_internals>/**"
       ]
     },
     {
@@ -31,21 +31,14 @@
       "smartStep": true,
       "skipFiles": [
         // force-array-multiline
-        "node_modules/**",
+        // "node_modules/**",
+        "node_modules/@jsenv/core/**",
+        "node_modules/@babel/template/**",
+        "node_modules/@dmail/cancellation/**",
+        "node_modules/rollup/**",
+        "node_modules/@rollup/**",
         "<node_internals>/**/*.js"
       ]
-    },
-    {
-      "name": "jsenv-chrome",
-      "type": "chrome",
-      "request": "launch",
-      // won't work on windows https://github.com/Microsoft/vscode/issues/40256
-      // relativeFile use backslashes
-      "url": "http://127.0.0.1:3456/${relativeFile}",
-      "runtimeArgs": ["--allow-file-access-from-files", "--disable-web-security"],
-      "sourceMaps": true,
-      "smartStep": true,
-      "skipFiles": ["node_modules/**", "<node_internals>/**/*.js"]
     },
     {
       "name": "jsenv-node-attach-child",
@@ -54,7 +47,49 @@
       "port": 40000,
       "smartStep": true,
       "sourceMaps": true,
-      "skipFiles": ["node_modules/**", "<node_internals>/**/*.js"]
+      "skipFiles": [
+        // "node_modules/**",
+        "node_modules/@babel/template/**",
+        "node_modules/@dmail/cancellation/**",
+        "node_modules/rollup/**",
+        "node_modules/@rollup/**",
+        "<node_internals>/**/*.js"
+      ]
+    },
+    {
+      "name": "jsenv-node-attach-subchild",
+      "type": "node",
+      "request": "attach",
+      "port": 40001,
+      "smartStep": true,
+      "sourceMaps": true,
+      "skipFiles": [
+        // "node_modules/**",
+        "node_modules/@babel/template/**",
+        "node_modules/@dmail/cancellation/**",
+        "node_modules/rollup/**",
+        "node_modules/@rollup/**",
+        "<node_internals>/**/*.js"
+      ]
+    },
+    {
+      "name": "jsenv-chrome",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://127.0.0.1:3456/node_modules/@jsenv/core/src/internal/jsenv-html-file.html?file=${relativeFile}",
+      "runtimeArgs": ["--allow-file-access-from-files", "--disable-web-security"],
+      "sourceMaps": true,
+      "webRoot": "${workspaceFolder}",
+      "smartStep": true,
+      "skipFiles": [
+        // force-multiline
+        "node_modules/@jsenv/core/**",
+        "node_modules/@babel/template/**",
+        "node_modules/@dmail/cancellation/**",
+        "node_modules/rollup/**",
+        "node_modules/@rollup/**",
+        "<node_internals>/**"
+      ]
     }
   ]
 }
