--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase",
-  "version": "12.1.0",
+  "version": "12.2.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,8 +14,9 @@
     "access": "public",
     "registry": "https://npm.pkg.github.com"
   },
-  "main": "dist/commonjs/main.js",
+  "type": "module",
   "module": "index.js",
+  "main": "dist/commonjs/main.cjs",
   "files": [
     "/dist/",
     "/src/",
@@ -39,25 +40,25 @@
     "postpublish": "node ./script/transform-package/restore-postinstall.js"
   },
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-syntax-jsx": "7.2.0",
-    "@jsenv/importmap-eslint-resolver": "2.0.0",
-    "@jsenv/util": "3.0.0-alpha.1",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-react": "7.17.0",
+    "@babel/core": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-syntax-import-meta": "7.8.3",
+    "@babel/plugin-syntax-jsx": "7.8.3",
+    "@jsenv/importmap-eslint-resolver": "2.1.1",
+    "@jsenv/util": "3.3.3",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-react": "7.18.0",
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
-    "@jsenv/assert": "1.1.1",
+    "@jsenv/assert": "1.2.1",
     "@jsenv/codecov-upload": "3.1.0",
-    "@jsenv/core": "10.5.0-alpha.1",
-    "@jsenv/eslint-config": "12.0.1",
+    "@jsenv/core": "10.6.0-alpha.0",
+    "@jsenv/eslint-config": "12.1.0",
     "@jsenv/github-release-package": "1.1.1",
-    "@jsenv/node-module-import-map": "10.0.0",
-    "@jsenv/package-publish": "1.2.0",
-    "@jsenv/prettier-check-project": "4.2.0",
+    "@jsenv/node-module-import-map": "10.1.0",
+    "@jsenv/package-publish": "1.4.0",
+    "@jsenv/prettier-check-project": "5.3.0",
     "@jsenv/prettier-config": "1.1.0",
     "eslint": "6.8.0",
     "prettier": "1.19.1",
