--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
-  "description": "eslint config used by jsenv codebase",
-  "version": "12.2.0",
+  "description": "eslint config used by jsenv codebase.",
+  "version": "12.3.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,7 +15,12 @@
     "registry": "https://npm.pkg.github.com"
   },
   "type": "module",
-  "module": "index.js",
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./dist/commonjs/main.cjs"
+    }
+  },
   "main": "dist/commonjs/main.cjs",
   "files": [
     "/dist/",
@@ -43,29 +48,28 @@
     "git-hook-pre-commit": "npm run prettier-format-stage"
   },
   "dependencies": {
-    "@babel/core": "7.8.3",
+    "@babel/core": "7.8.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.8.3",
     "@babel/plugin-syntax-jsx": "7.8.3",
-    "@jsenv/importmap-eslint-resolver": "2.1.1",
-    "@jsenv/util": "3.3.3",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-react": "7.18.0",
+    "@jsenv/importmap-eslint-resolver": "2.2.0",
+    "@jsenv/util": "3.4.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-react": "7.18.2",
     "babel-eslint": "11.0.0-beta.0"
   },
   "devDependencies": {
-    "@jsenv/assert": "1.2.1",
-    "@jsenv/codecov-upload": "3.1.0",
-    "@jsenv/core": "10.6.0-alpha.0",
-    "@jsenv/eslint-config": "12.2.0-alpha.0",
-    "@jsenv/git-hooks": "1.2.0",
+    "@babel/plugin-transform-react-jsx": "7.8.3",
+    "@jsenv/assert": "1.2.2",
+    "@jsenv/codecov-upload": "3.2.0",
+    "@jsenv/core": "11.4.1",
+    "@jsenv/eslint-config": "12.2.0",
+    "@jsenv/git-hooks": "1.3.1",
     "@jsenv/github-release-package": "1.1.1",
-    "@jsenv/node-module-import-map": "10.1.0",
-    "@jsenv/package-publish": "1.4.0",
-    "@jsenv/prettier-check-project": "5.3.0",
-    "@jsenv/prettier-config": "1.1.0",
+    "@jsenv/node-module-import-map": "11.0.0",
+    "@jsenv/package-publish": "1.4.1",
+    "@jsenv/prettier-check-project": "5.4.0",
     "eslint": "6.8.0",
-    "prettier": "1.19.1",
-    "rimraf": "3.0.0"
+    "prettier": "1.19.1"
   }
 }
