--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase.",
-  "version": "12.3.0",
+  "version": "12.3.1",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "files": [
     "/dist/",
     "/src/",
-    "/babel.config.js",
+    "/babel.config.cjs",
     "/index.js"
   ],
   "scripts": {
