--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase.",
-  "version": "12.3.1",
+  "version": "12.4.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
     "registry": "https://npm.pkg.github.com"
   },
   "type": "module",
+  "module": "index.js",
   "exports": {
     ".": {
       "import": "./index.js",
@@ -29,10 +30,10 @@
     "/index.js"
   ],
   "scripts": {
-    "test": "node ./script/test/test.js",
-    "test-with-coverage": "node ./script/test/test.js --coverage",
-    "eslint-check": "eslint .",
-    "prettier-format": "node ./script/prettier-format/prettier-format.js",
+    "test": "node --no-warnings ./script/test/test.js",
+    "test-with-coverage": "npm run test -- --coverage",
+    "eslint-check": "node ./node_modules/eslint/bin/eslint.js .",
+    "prettier-format": "node --no-warnings ./script/prettier-format/prettier-format.js",
     "prettier-format-stage": "npm run prettier-format -- --staged",
     "prettier-check": "npm run prettier-format -- --dry-run",
     "upload-coverage": "node ./script/upload-coverage/upload-coverage.js",
@@ -40,36 +41,35 @@
     "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
     "install-git-hooks": "node ./script/install-git-hooks/install-git-hooks.js",
     "dist": "npm run clean && npm run generate-commonjs-bundle",
-    "clean": "rimraf dist && rimraf coverage",
-    "reinstall": "npm run clean && rimraf node_modules && npm install",
-    "postinstall": "npm run generate-import-map && npm run install-git-hooks",
+    "postinstall": "npm run generate-import-map && npm run install-git-hooks && cd ./.github/release && npm install",
     "prepublishOnly": "node ./script/transform-package/remove-postinstall.js && npm run dist",
     "postpublish": "node ./script/transform-package/restore-postinstall.js",
     "git-hook-pre-commit": "npm run prettier-format-stage"
   },
   "dependencies": {
-    "@babel/core": "7.8.4",
+    "@babel/core": "7.9.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.8.3",
     "@babel/plugin-syntax-jsx": "7.8.3",
-    "@jsenv/importmap-eslint-resolver": "2.2.0",
-    "@jsenv/util": "3.4.1",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-react": "7.18.2",
-    "babel-eslint": "11.0.0-beta.0"
+    "@babel/plugin-syntax-numeric-separator": "7.8.3",
+    "@jsenv/importmap-eslint-resolver": "2.2.2",
+    "@jsenv/util": "3.5.2",
+    "babel-eslint": "11.0.0-beta.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-react": "7.19.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "7.8.3",
-    "@jsenv/assert": "1.2.2",
-    "@jsenv/codecov-upload": "3.2.0",
-    "@jsenv/core": "11.4.1",
-    "@jsenv/eslint-config": "12.2.0",
-    "@jsenv/git-hooks": "1.3.1",
+    "@jsenv/assert": "2.1.0",
+    "@jsenv/codecov-upload": "3.4.0",
+    "@jsenv/core": "12.2.2",
+    "@jsenv/eslint-config": "12.3.1",
+    "@jsenv/git-hooks": "1.3.3",
     "@jsenv/github-release-package": "1.1.1",
-    "@jsenv/node-module-import-map": "11.0.0",
-    "@jsenv/package-publish": "1.4.1",
-    "@jsenv/prettier-check-project": "5.4.0",
+    "@jsenv/node-module-import-map": "11.1.0",
+    "@jsenv/package-publish": "1.5.1",
+    "@jsenv/prettier-check-project": "5.6.0",
+    "@jsenv/prettier-config": "1.2.0",
     "eslint": "6.8.0",
-    "prettier": "1.19.1"
+    "prettier": "2.0.2"
   }
 }
