--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase.",
-  "version": "12.4.0",
+  "version": "12.4.1",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -37,10 +37,10 @@
     "prettier-format-stage": "npm run prettier-format -- --staged",
     "prettier-check": "npm run prettier-format -- --dry-run",
     "upload-coverage": "node ./script/upload-coverage/upload-coverage.js",
-    "generate-commonjs-bundle": "node ./script/generate-commonjs-bundle/generate-commonjs-bundle.js",
+    "generate-commonjs-bundle": "node --no-warnings ./script/generate-commonjs-bundle/generate-commonjs-bundle.js",
     "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
     "install-git-hooks": "node ./script/install-git-hooks/install-git-hooks.js",
-    "dist": "npm run clean && npm run generate-commonjs-bundle",
+    "dist": "npm run generate-commonjs-bundle",
     "postinstall": "npm run generate-import-map && npm run install-git-hooks && cd ./.github/release && npm install",
     "prepublishOnly": "node ./script/transform-package/remove-postinstall.js && npm run dist",
     "postpublish": "node ./script/transform-package/restore-postinstall.js",
@@ -62,7 +62,7 @@
     "@jsenv/assert": "2.1.0",
     "@jsenv/codecov-upload": "3.4.0",
     "@jsenv/core": "12.2.2",
-    "@jsenv/eslint-config": "12.3.1",
+    "@jsenv/eslint-config": "12.4.0",
     "@jsenv/git-hooks": "1.3.3",
     "@jsenv/github-release-package": "1.1.1",
     "@jsenv/node-module-import-map": "11.1.0",
