update dev files

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
     "install-git-hooks": "node ./script/install-git-hooks/install-git-hooks.js",
     "dist": "npm run generate-commonjs-bundle",
-    "postinstall": "npm run generate-import-map && npm run install-git-hooks && cd ./.github/release && npm install",
+    "postinstall": "npm run generate-import-map && npm run install-git-hooks",
     "prepublishOnly": "node ./script/transform-package/remove-postinstall.js && npm run dist",
     "postpublish": "node ./script/transform-package/restore-postinstall.js",
     "git-hook-pre-commit": "npm run prettier-format-stage"
