--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsenv/eslint-config",
   "description": "eslint config used by jsenv codebase.",
-  "version": "12.4.1",
+  "version": "12.5.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -39,37 +39,34 @@
     "upload-coverage": "node ./script/upload-coverage/upload-coverage.js",
     "generate-commonjs-bundle": "node --no-warnings ./script/generate-commonjs-bundle/generate-commonjs-bundle.js",
     "generate-import-map": "node ./script/generate-import-map/generate-import-map.js",
-    "install-git-hooks": "node ./script/install-git-hooks/install-git-hooks.js",
     "dist": "npm run generate-commonjs-bundle",
-    "postinstall": "npm run generate-import-map && npm run install-git-hooks",
+    "postinstall": "npm run generate-import-map",
     "prepublishOnly": "node ./script/transform-package/remove-postinstall.js && npm run dist",
-    "postpublish": "node ./script/transform-package/restore-postinstall.js",
-    "git-hook-pre-commit": "npm run prettier-format-stage"
+    "postpublish": "node ./script/transform-package/restore-postinstall.js"
   },
   "dependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "7.10.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-syntax-import-meta": "7.8.3",
-    "@babel/plugin-syntax-jsx": "7.8.3",
-    "@babel/plugin-syntax-numeric-separator": "7.8.3",
-    "@jsenv/importmap-eslint-resolver": "2.2.2",
-    "@jsenv/util": "3.5.2",
+    "@babel/plugin-syntax-import-meta": "7.10.4",
+    "@babel/plugin-syntax-jsx": "7.10.4",
+    "@babel/plugin-syntax-numeric-separator": "7.10.4",
+    "@jsenv/importmap-eslint-resolver": "2.3.0",
+    "@jsenv/util": "3.6.3",
     "babel-eslint": "11.0.0-beta.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-react": "7.19.0"
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-react": "7.20.3"
   },
   "devDependencies": {
-    "@jsenv/assert": "2.1.0",
-    "@jsenv/codecov-upload": "3.4.0",
-    "@jsenv/core": "12.2.2",
+    "@jsenv/assert": "2.2.1",
+    "@jsenv/codecov-upload": "3.4.1",
+    "@jsenv/core": "14.0.0-alpha.10",
     "@jsenv/eslint-config": "12.4.1",
-    "@jsenv/git-hooks": "1.3.3",
     "@jsenv/github-release-package": "1.2.2",
-    "@jsenv/node-module-import-map": "11.1.0",
+    "@jsenv/node-module-import-map": "12.0.0-alpha.0",
     "@jsenv/package-publish": "1.5.1",
     "@jsenv/prettier-check-project": "5.6.0",
     "@jsenv/prettier-config": "1.2.0",
-    "eslint": "6.8.0",
-    "prettier": "2.0.2"
+    "eslint": "7.4.0",
+    "prettier": "2.0.5"
   }
 }
